fix component first

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -15,7 +15,8 @@
 }
 
 .content h2 {
-  font-weight: 500;
+  font-weight: 800;
+  color: #4d4d4d;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
   margin-bottom: 10px;
