fix struktur, add router

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -78,3 +78,12 @@
     font-size: 0.9rem; /* Smaller font size for smaller screens */
   }
 }
+
+#error-page {
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
