--- a/src/style/TeamPage.css
+++ b/src/style/TeamPage.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .container-team {
   max-width: 100%;
   width: 850px;
@@ -19,6 +21,10 @@
   width: 100%;
   height: 350px;
   border-radius: 8px;
+}
+
+.container-team .people-team {
+  margin-top: 20px;
 }
 
 /* Media Query untuk perangkat dengan lebar maksimal 768px (tablet atau ponsel lebih kecil) */
