--- a/src/style/TeamPage.css
+++ b/src/style/TeamPage.css
@@ -44,13 +44,14 @@
 }
 
 /* Media Query untuk perangkat dengan lebar maksimal 768px (tablet atau ponsel lebih kecil) */
-@media (max-width: 768px) {
+@media (max-width: 855px) {
   .container-team {
     width: 90%;
   }
 
   .container-team h1 {
     font-size: 3rem;
+    margin-top: 5px;
   }
 
   .container-team iframe {
@@ -66,6 +67,7 @@
 
   .container-team h1 {
     font-size: 2.5rem;
+    margin-top: 8px;
   }
 
   .container-team iframe {
